--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Hackeando con HTML</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<h1>Hola mundo</h1>
