Modificado el index.html

--- a/index.html
+++ b/index.html
@@ -9,4 +9,12 @@
 	<p>Soy un parrafo</p>
 	<h1>Hola Argentina</h1>
 	<p>Soy un parrafo escrito por un argentino</p>
+	<h1>Lista de cosas en mi escritorio</h1>
+	<ol>
+	<li>Compu</li>
+	<li>Mouse</li>
+	<li>Pañuelos descartables</li>
+	<li>Apuntes</li>
+	<li>Utiles de oficina</li>
+	</ol>
 </body>
